--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2021"
 chrono = "0.4.37"
 clap = { version = "4.5.4", features = ["derive"] }
 dirs = "5.0.1"
+prettytable-rs = "0.10.0"
 serde_json = "1.0.115"
